# bottle-framework

./: projeto.py  projeto_again.py  projeto_formulario.py  projeto_post.py  pyproject.toml
bottle_app/: app.py  base_forms.py  cadastro.html  generic.html  login.html  main.html
bottle_app/static/: style.css
features/: teste.feature
features/steps/: steps.py
paginas/: base.html  teste.html  user.html
