[tool.poetry]
name = "bottle-framework"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{include = "bottle_framework"}]

[tool.poetry.dependencies]
python = "3.7.13"
bottle = "^0.12.25"
jinja2 = "^3.1.2"
behave = "^1.2.6"
wtforms = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
